--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -36,4 +36,4 @@ has @.stash;
 ***** Using @.stash internally
 @!stash = (...);
 
-** david christensen expounds on erlang
+** david christensen expounds on erlang compared to raku and perl
