--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -39,4 +39,4 @@ has @.stash;
 
 ** david christensen expounds on erlang compared to raku and perl
 
-** question about bruce grey  
+** question about bruce grey's "reading files can't be this simple" 
