--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -46,12 +46,11 @@ has @.stash;
 *** https://github.com/doomvox/raku-study/tree/main/bin/2021aug15/bruce_gray_io_lines_etc.raku
 
 
-
-
-* meeting notes
-** https://github.com/doomvox/raku-study/blob/main/notes/meeting_2021aug15.md
-* code examples:
-** https://github.com/doomvox/raku-study/tree/main/bin/2021aug15
+** the usual links:
+*** meeting notes
+**** https://github.com/doomvox/raku-study/blob/main/notes/meeting_2021aug15.md
+*** code examples:
+**** https://github.com/doomvox/raku-study/tree/main/bin/2021aug15
 
 
 
