--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -53,3 +53,6 @@ has @.stash;
 
 
 
+** fun with raku on freebsd (bruce gray)
+https://www.freshports.org/lang/rakudo/ 
+https://cgit.freebsd.org/ports/commit/?id=a80c31a5dda807dcedb2391dc3e2c6f578f8ce3d 
