--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -1,7 +1,9 @@
 * meeting notes August 15, 2021
 ** callbacks
 *** aka the "anonymous subs" of perl5, lambdas of lisp and other cs nerd langs
-https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/anonymous_routines_with_placeholder_variables.raku
+**** bruce gray likes "code blocks" despite the potential ambiguities
+***** "callbacks" is narrow, refers to how they're used
+**** https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/anonymous_routines_with_placeholder_variables.raku
 *** misc sub-topics:
 **** sigils: $code vs &code
 **** sub vs block
