--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -10,8 +10,15 @@
 ***** subs can use return
 **** placeholder vars idiom
 ***** use the hat just once (the condom convention)
-** TODO .round arguments
+** .round arguments, whining about the docs
 https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_100.raku
+*** a case where I feel confused by the "signature" approach, despite knowing better
+*** 
+*** badly needs code examples.
+*** naming of "scale" seems strange, hard to improve:
+**** "place" isn't right, .round isn't limited to powers of ten
+**** I think "nearest" might work:  you "round off to the nearest"
+
 ** Data::Dualmap, first release
 *** should handle all built-in datatypes
 *** has most features of my perl5 Data::Math
