--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -13,7 +13,7 @@
 ** .round arguments, whining about the docs
 https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_100.raku
 *** a case where I feel confused by the "signature" approach, despite knowing better
-*** 
+**** signatures are how things are defined, not how they're to be used
 *** badly needs code examples.
 *** naming of "scale" seems strange, hard to improve:
 **** "place" isn't right, .round isn't limited to powers of ten
