--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -19,7 +19,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_1
 **** "place" isn't right, .round isn't limited to powers of ten
 **** I think "nearest" might work:  you "round off to the nearest"
 
-** Data::Dualmap, first release
+** Data::Dualmap, near first release
 *** should handle all built-in datatypes
 *** has most features of my perl5 Data::Math
 **** custom callbacks, numerics, strings
