--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -23,8 +23,13 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_1
 *** should handle all built-in datatypes
 *** has most features of my perl5 Data::Math
 **** custom callbacks, numerics, strings
-**** TODO implement skip_keys patterns
-***** for funsies, maybe accept junctions (use type Mu)
+**** implementing skip_keys patterns
+***** for funsies, maybe accept junctions (use type Mu)?
+***** last bugs:
+****** (1) need to explicitly pass through when "skipping"
+****** (2) subtle need to do data_qualify in either case
+******* had an intermittant test failure: unpredicitable key ordering 
+
 *** some discussion of whether it would be better to generalize further
 **** dualmap suggests it applies a block to all leafs
 **** "It's hard to generalize about generalization, sometimes it's good, sometimes not."
