--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -30,7 +30,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_1
 ****** (2) subtle need to do data_qualify in either case
 ******* had an intermittant test failure: unpredicitable key ordering 
 *** open question whether it would be better to generalize further
-**** dualmap suggests it applies a block to all leafs
+**** name "dualmap" suggests it applies a block to all leafs
 **** "It's hard to generalize about generalization, sometimes it's good, sometimes not."
 ** data classes
 *** custom classes as data containers (from June 20, 2021)
