--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -53,7 +53,10 @@ has @.stash;
 ***** Using @.stash internally
 @!stash = (...);
 ***** placeholder vars
-{ $^a eq $^b || $a ?? "$a|$b" }
+****** okay:
+{ $^a eq $^b || $^a ?? "$^a|$^b" }
+****** not okay:
+if( $^a eq $^b ) { $^a } else {"$^a|$^b}
 ** david christensen expounds on erlang compared to raku and perl
 *** "representational polymorphic" -- larry wall
 
