--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -57,6 +57,8 @@ has @.stash;
 { $^a eq $^b || $^a ?? "$^a|$^b" }
 ****** not okay:
 if( $^a eq $^b ) { $^a } else {"$^a|$^b}
+****** better:
+if( $^a eq $^b ) { $a } else {"$a|$b}
 ** david christensen expounds on erlang compared to raku and perl
 *** "representational polymorphic" -- larry wall
 
