--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -18,7 +18,7 @@
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021aug15/callback_issue_demos.raku
 **** error messaging weak (sounds like it's pointing elsewhere, need to check line numbers)
 **** code examples in the docs are sketchy
-***** I think the standard idiom needs to change ("condom converion" mentioned above
+***** I think the standard idiom needs to change to the "condom convention" mentioned above
 ****** https://github.com/rakudo/rakudo/issues/4490
 
 
