--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -48,7 +48,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_1
 **** signatures are how things are defined, not how they're to be used
 *** badly needs code examples.
 *** naming of "scale" seems strange, hard to improve:
-**** "place" isn't right, .round isn't limited to powers of ten
+**** "place" isn't right: .round isn't limited to powers of ten
 **** I think "nearest" might work:  you "round off to the nearest"
 
 ** Data::Dualmap, near first release
