--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -47,7 +47,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_1
 *** a case where I feel confused by the "signature" approach, despite knowing better
 **** signatures are how things are defined, not how they're to be used
 *** badly needs code examples.
-*** naming of "scale" seems strange, hard to improve:
+*** naming of "scale" seems strange, but hard to improve:
 **** "place" isn't right: .round isn't limited to powers of ten
 **** I think "nearest" might work:  you "round off to the nearest"
 
