--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -58,8 +58,8 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_1
 **** implementing skip_keys patterns
 ***** for funsies, maybe accept junctions (use type Mu)?
 ***** last bugs:
-****** (1) need to explicitly pass through when "skipping"
-****** (2) subtle need to do data_qualify in either case
+****** (1) needed to explicitly pass through when "skipping"
+****** (2) subtle need to do data_qualify in skip case also
 ******* had an intermittant test failure: unpredicitable key ordering 
 *** open question whether it would be better to generalize further
 **** name "dualmap" suggests it applies a block to all leafs
