--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -102,8 +102,15 @@ git init ; git add . ; git commit -m 'Initial commit'
 See: /home/doom/End/Cave/Ice/Xtal/Git/github.org
 *** fourth stop: haven't covered the cool stuff
 **** branch and merging
-git branch     # list branches
-git branch -r  # list remote branches
+git branch                             # list branches
+git branch -r                          # list remote branches
+git branch playing_with_new_feature
+git checkout playing_with_new_feature
+# ... do stuff ...
+# when happy with state of branch
+git checkout master                    # return to original main branch
+git merge playing_with_new_feature     # import work from branch
+
 
 **** github pull request
 https://docs.github.com/en/github/collaborating-with-issues-and-pull-requests/about-pull-requests
