--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -1,4 +1,6 @@
 * meeting notes August 29, 2021
+** hidden agenda
+*** TODO 
 ** before I forget
 *** the argument to round might be called "nearest"
 "round off to the nearest"
@@ -22,3 +24,8 @@ errors I worry about."
 
    -- "Javascript: The Good Parts" (2008)
 
+*** standard complaint
+**** we could check whether strong typing helps
+***** e.g. conduct experiments where teams of programmers compete
+***** but computer "scientists" don't do experiments
+****** not if it means talking to a social scienctist
