--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -60,6 +60,11 @@ my $result = $dmh.dualmap( '-', $gross, $costs );
 my $result = $obj.?method($arg, $arg);
 #+END_SRC
 
+*** Safe call operator
+**** "$invocant.?method calls method method on $invocant if it has a method of such name. Otherwise it returns Nil."
+**** https://docs.raku.org/language/operators#methodop_.?
+
+
 *** WTF? 
 **** from a jonathan worthington code example
 
