--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -63,7 +63,7 @@ my $result = $obj.?method($arg, $arg);
 *** Safe call operator
 **** "$invocant.?method calls method method on $invocant if it has a method of such name. Otherwise it returns Nil."
 **** https://docs.raku.org/language/operators#methodop_.?
-
+**** avoids need to check if .can
 
 *** WTF? 
 **** from a jonathan worthington code example
