--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -48,6 +48,7 @@ my $result = $dmh.dualmap( '-', $gross, $costs );
 **** did a rewrite
 ***** dualmap is now more like deepmap
 ****** needs a code block as argument
+****** runs on all types of leaf nodes
 ***** dualmap-numerics
 ****** clone of my perl5 project Data::Math
 ******* presumes you're working on numeric leaf nodes
