--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -70,7 +70,7 @@ my $result = $obj.?method($arg, $arg);
 **** "$invocant.?method calls method method on $invocant if it has a method of such name. Otherwise it returns Nil."
 **** https://docs.raku.org/language/operators#methodop_.?
 **** avoids need to check if .can
-**** from a jonathan worthington code example
+**** (from a jonathan worthington code example)
 
 ** the usual links:
 *** meeting notes
