--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -1,7 +1,7 @@
 * meeting notes August 29, 2021
 ** hidden agenda
-*** david has something
-**** 
+*** david christensen
+**** general perl5 code to walk a structure recursively
 ** before I forget
 *** the argument to round might be called "nearest"
 "round off to the nearest"
