--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -2,10 +2,15 @@
 ** hidden agenda
 *** david christensen
 **** general perl5 code to walk a structure recursively
-
+**** network
+*** jeff
+**** pod question?
 ** before I forget
 *** the argument to round might be called "nearest"
 "round off to the nearest"
+
+*** lowest common ancestor with raku classes
+https://stackoverflow.com/questions/68869354/given-two-objects-can-you-find-the-nearest-common-ancestor
 
 ** multiple dispatch
 
