--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -2,8 +2,8 @@
 ** hidden agenda
 *** david christensen
 **** general perl5 code to walk a structure recursively
-**** network-- linode unisys
-***** linode sponsors of  perl 
+**** network-- unifi on linode 
+***** linode sponsors of perl 
 *** jeff
 **** pod question?
 ** before I forget
