--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -3,7 +3,7 @@
 *** david christensen
 **** general perl5 code to walk a structure recursively
 **** home network: unifi on linode 
-***** linode sponsors of perl
+***** linode: sponsors of perl
 ***** unifi controller runs on enginex webserver
 *** jeff
 **** pod question?
