--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -71,7 +71,14 @@ my $result = $dmh.dualmap( '-', $gross, $costs );
 
 ** the maybe method (dot question mark operator: ".?")
 #+BEGIN_SRC perl6
+
 my $result = $obj.?method($arg, $arg);
+
+
+if $obj.can('method') {
+   $obj.method( $arg1, $arg2 );
+}
+
 #+END_SRC
 
 *** Safe call operator
