--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -93,8 +93,8 @@ if $obj.can('method') {
 **** https://github.com/doomvox/raku-study/tree/main/bin/2021aug29
 
 
-** Bruce Gray:  https://theweeklychallenge.org/blog/perl-weekly-challenge-127/
-
+** Bruce Gray: answering the perl weekly challenge in perl and raku
+*** https://theweeklychallenge.org/blog/perl-weekly-challenge-127/
 *** https://github.com/Util/perlweeklychallenge-club/blob/branch-for-challenge-127/challenge-127/bruce-gray/perl/ch-1.pl 
 *** Design by Contract, "Fast Fail Principle": https://enterprisecraftsmanship.com/posts/fail-fast-principle/ 
 *** https://github.com/manwar/perlweeklychallenge-club
