--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -31,7 +31,7 @@ errors I worry about."
 
    -- "Javascript: The Good Parts" (2008)
 
-*** standard complaint
+*** my standard complaint
 **** we could check whether strong typing helps
 ***** e.g. conduct experiments where teams of programmers compete
 ***** but computer "scientists" don't do experiments
