--- a/notes/meeting_2021aug29.org
+++ b/notes/meeting_2021aug29.org
@@ -8,8 +8,8 @@
 ****** https://github.com/doomvox/raku-study/blob/main/notes/dpchrist-perl-walk/Dpchrist-Perl-walk-flowchart.pdf
 ****** https://github.com/doomvox/raku-study/blob/main/notes/dpchrist-perl-walk/Dpchrist-Perl-walk-flowchart.odg
 
-** the round method, currently calls it's argument "scale"
-*** the argument to round might be called "nearest"
+** the method .round, currently calls it's argument "scale"
+*** that might be called "nearest"
 "round off to the nearest"
 
 *** lowest common ancestor with raku classes
